# zulipchat-mcp

./: .env.example  .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE-ENHANCEMENTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CLEANUP.md  CODEX-ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_INFRASTRUCTURE_REVIEW.md  Dockerfile  EVENT_MODULES_REVIEW.md  FAILURES-REPORT.md  FIXES.md  HANDOFF.md  IMPLEMENTATION_PHASES.md  IMPROVEMENTS.md  INTEGRATE-PLAN.md  KNOWN-ISSUES.md  LICENSE  MANIFEST.in  MESSAGING_MODULES_REVIEW.md  NEW-IDEA.md  PLAN.md  PLAN_PHASE2.md  README.md  REFACTOR-PLAN.md  RELEASE.md  RELEASE_v2.5.0.md  RELEASING.md  REVIEW_REQUEST.md  ROADMAP.md  SEARCH_USER_MODULES_REVIEW.md  SECURITY.md  STREAM_MODULES_REVIEW.md  SUPPORT.md  TEST-RUN-REPORT.md  (+15 more)
.archived/: AGENT-COMPATIBILITY.md  CODEX-ANALYSIS.md  CODEX-CONTINUES.md  DOCUMENTATION_PROMPT.md  PLAN-REFACTOR.md  TESTING_PROMPT.md  ZULIP-API-ANALYSIS.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: manifest_manager.py  orchestrator.md
.claude/commands/: lint.md  server.md  test.md  tool.md
.claude/hooks/: code-validator.py  git-commit-guard.py
.claude/statusline/: mcp-status.py  variation1-clean.py  variation2-rich.py  variation3-smart.py  warp-status.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
.planning/: PROJECT.md
agent_adapters/: claude_code.py  gemini_cli.py  opencode.py  setup_agents.py
agents/: README.md  claude_code_commands.py
docs/: AGENT-CONFIGURATIONS.md  BOT_SETUP.md  IMPLEMENTATION-REPORT.md  IMPLEMENTATION_PHASES.md  NEXT-SESSION-PROMPT.md  README.md  RELEASING.md  TROUBLESHOOTING.md  ZULIP-ENHANCEMENTS-PLAN.md  api-keys.md  commands.md  mcp-packaging-standards.md  prompt-work-1.md  promtp-wrok-2.md  setup-guide.md
docs/api-reference/: agents.md  commands.md  events.md  files.md  messaging.md  search.md  streams.md  system.md  users.md
docs/community/: repo-readiness-checklist.md
docs/developer-guide/: architecture.md  foundation-components.md  tool-categories.md
docs/integrations/: README.md  antigravity.md  claude-code.md  codex.md  cursor.md  gemini-cli.md  generic.md  opencode.md  vscode-copilot.md  windsurf.md
docs/testing/: README.md
docs/user-guide/: configuration.md  installation.md  quick-start.md  setup-wizard.md
docs/v2.5.0/: AUDIT_WARNING.md  README.md  migration-guide.md  troubleshooting.md
examples/: afk_command.py  hook_handler.py  response_monitor.py  test_integration_legacy.sh  test_mcp_tools_legacy.py
examples/adapters/: setup_agents.py
examples/hooks/: claude_code_bridge.py  example_settings.json  setup_hooks.sh
hooks/: claude_code_bridge.py  example_settings.json  setup_hooks.sh
integrations/: README.md  catalog.json
integrations/codex/: install.sh  (+2 more)
scripts/: bump_version.py  install.sh  pre_release_smoke.sh  release_preflight.py  setup_claude_code.sh  test_integration.sh  test_mcp_tools.py
tests/: conftest.py  test_agent_system.py  test_assistants.py  test_async.py  test_batch_ops.py  test_commands.py  test_dual_identity.py  test_exceptions.py  test_health.py  test_integrations_registry.py  test_logging_config.py  test_metrics.py  test_notifications.py  test_scheduler.py  test_security.py  test_server.py  test_server_enhanced.py  test_server_entrypoint.py  test_setup_wizard.py  test_tool_reliability.py  test_workflows.py
(+272 files in other folders)
